# SQL-minus

./: CMakeLists.txt  SQL-4.c  SQL-Minus-version2.c  SQL-Minus-version3.c  SQL-Minus.c  lab-2.c  lab.c  laboratory.c  main.c
