cmake_minimum_required(VERSION 3.26)
project(VacationProject C)

set(CMAKE_C_STANDARD 17)

add_executable(VacationProject main.c)
add_executable(SQL-Minus SQL-Minus.c)
add_executable(SQL-Minus-version2 SQL-Minus-version2.c)
add_executable(lab lab.c)
add_executable(SQL-Minus-version3 SQL-Minus-version3.c)
add_executable(laboratory laboratory.c)
add_executable(lab-2 lab-2.c)
add_executable(SQL-4 SQL-4.c)